--- a/.github/workflows/ci-docker-build-publish-docker-hub.yaml
+++ b/.github/workflows/ci-docker-build-publish-docker-hub.yaml
@@ -19,8 +19,8 @@ jobs:
         name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.LOGIN }}
-          password: ${{ secrets.PASSWORD }}
+          username: ${{ secrets.DOCKER_LOGIN }}
+          password: ${{ secrets.DOCKER_TOKEN }}
       -
         name: Build and push
         uses: docker/build-push-action@v3
